[tool.poetry]
name = "lw3"
version = "0.1.0"
description = ""
authors = ["Pavel Miskevich <chiki-takipavel@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^1.5.3"
opencv-python-headless = "^4.7.0.72"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
